lintian (2.5.3) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - boilerplate-copyright-format-uri
      - comma-separated-files-in-dep5-copyright
      - debian-copyright-is-symlink
      - dh_installmanpages-is-obsolete
      - missing-field-in-dep5-copyright
      - missing-license-paragraph-in-dep5-copyright
      - missing-license-text-in-dep5-copyright
      - no-debian-copyright
      - obsolete-field-in-dep5-copyright
      - out-of-date-copyright-format-uri
      - syntax-error-in-dep5-copyright
      - unknown-copyright-format-uri
      - unknown-paragraph-in-dep5-copyright
      - unused-license-paragraph-in-dep5-copyright
      - unversioned-copyright-format-uri
      - wiki-copyright-format-uri

  * checks/*:
    + [NT] Dropped fields from Needs-Info, it is no longer needed.
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.  (Closes: #637595)
  * checks/{conffile,etcfiles}{,.desc}:
    + [JW] Merged etcfiles into conffile.  (Closes: #637590)
  * checks/debhelper:
    + [NT] Recognise /usr/share/R/debian/r-cran.mk as a cdbs-based
      build.  This prevents false-positive "unneeded cdbs" warning.
    + [JW] Check for use of the obsolete dh_installmanpages debhelper
      program.  Thanks to Joey Hess for the report.  (Closes: #634112).
  * checks/duplicate-files{,.desc}:
    + [NT] Replace the exception for "__init__.py" files by excluding
      all empty files from the check.  The bug (#632789) only requests
      an exception for "empty __init__.py" files and generally empty
      files are unlikely to cause a serious size-waste.
  * checks/fields.desc:
    + [NT] Mention that perl modules included in perl itself should
      be the first dependency if it is only included in the perl
      from experimental.  Thanks to Dominic Hargreaves for the
      report and the patch.  (Closes: #637793)
  * checks/{filenames,rules}.desc:
    + [NT] Improved the descriptions of some tags.  (Closes: #639018)