@@ -2,6 +2,8 @@ Testname: copyright-file-general
 Sequence: 6000
 Version: 1.0
 Description: Test checking of copyright files
+Skeleton: pedantic
+Options: -IE --pedantic
 Test-For:
  FSSTND-dir-in-usr
  copyright-contains-dh-make-perl-boilerplate
@@ -12,6 +14,7 @@ Test-For:
  copyright-file-contains-full-gpl-license
  copyright-file-is-symlink
  copyright-file-lacks-pointer-to-perl-license
+ copyright-has-crs
  copyright-has-url-from-dh_make-boilerplate
  copyright-refers-to-bad-php-license
  copyright-refers-to-compressed-license
